# pyproject.toml

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binder-launcher-r"
version = "0.1.0"
dependencies = [
    "tornado",
    "jupyter-server"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["binder_launcher*"]
